--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS_Project</title>
+    <link href="style.css" rel="stylesheet" >
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,19 +21,19 @@
     <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
-        <label for="check" style="color: white">
-          <i class="fa-solid fa-bars"></i>
+        <label for="check">    <!-- btn_one's label is attached with checkbox -->
+          <i class="fa-solid fa-bars"></i>            <!-- Hamburger menu icon -->
         </label>
       </div>
 
       <div class="sidebar_menu">
         <div class="logo">
-          <a href="#">Apna College</a>
+          <a href="#">Manav Juneja</a>
         </div>
 
         <div class="btn_two">
-          <label for="check" style="color: grey">
-            <i class="fa-solid fa-xmark"></i>
+          <label for="check">   <!-- btn_two's label is attached with checkbox -->
+            <i class="fa-solid fa-xmark"></i>         <!-- x mark icon -->
           </label>
         </div>
 
